--- a/Part 1/part1.css
+++ b/Part 1/part1.css
@@ -2,7 +2,7 @@ p{color:black;
    font-family:Blackadder ITC,serif;
    font-size:130%}
 pre{ font-style:italic;}
-body{background-image:url("background2.jpg");
+body{background-image:url("background.jpg");
 	 background-size:contain;
      margin-right:10em;
 	 margin-left:10em;
