--- a/Part2/bad.css
+++ b/Part2/bad.css
@@ -41,8 +41,9 @@ p,h1 {
 	}	
 img{
 	height:10em; 
-    width:10em; }
+    	width:10em; }
 html{
 	background-image:url('images/starry.jpg');
 	background-size:100% 100%;
+	height:100%;
 }
