--- a/Part2/good.css
+++ b/Part2/good.css
@@ -1,11 +1,12 @@
-.banner{
-	width:100%;
-	height:2em;
-	}
 .header{
 	background-image:url('images/goodbanner.jpg');
 	text-align:center;
-
+	background-repeat:no-repeat;
+	background-size:100%;
+	font-size:350%;
+	height: 200px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 	}
 .size1{
 	height:10em; 
@@ -16,18 +17,31 @@
 	height:10em; 
     width:10em;
 	float:right;		
+	}	
+.margins{
+	margin-left:10em;
+	margin-right:20em;
 	}
-.bottom{
-	background-image:url('images/wood.jpg');
-	position:fixed;
+.centre{
+	display: table;
+    margin: 0 auto;
+	background: linear-gradient(grey, black);
+	width:100%;
+	text-align:center;
+	}
+.bottom{	
     height:2em;
 	bottom:3px;
 	width:100%;
-	background-size: 100%;
-
+	text-align:center;
+	background: linear-gradient(grey, black);
+	color:white;
 	}
-	
-html,body {padding:0; margin:0;}
+body {
+	padding:0; 
+	margin:0; 
+	margin-top: 0; 
+	}
 ul{
 	list-style-type:none;
 	margin:0;
@@ -35,3 +49,17 @@ ul{
 	float:right;
 	background-color: #dddddd;
 	}
+ul li{
+	text-align:center;
+   }
+a{
+	margin-right:10em;
+	font-size:130%;
+	color:white;
+	}
+a:hover{
+	color:blue;
+	}
+a:link {
+    text-decoration: none;
+}
