--- a/Part1/part1.css
+++ b/Part1/part1.css
@@ -1,6 +1,6 @@
 p{color:black; 
-   font-family:Blackadder ITC,serif;
-   font-size:130%}
+   font-family:Georgia,serif;
+  }
 pre{ font-style:italic;}
 body{background-image:url("background.jpg");
 	 background-size:contain;
@@ -8,7 +8,7 @@ body{background-image:url("background.jpg");
 	 margin-left:10em;
 	 text-align:center}
 h1,h2,h3,h4{
-     font-family:Algerian,serif;
+     font-family:Arial Black,serif;
 	 color:black;
 	 text-align:center;}
 img{height:30em; 
